force-app/main/default/objects/Customer_Registration__c/fields/Presales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Presales_Agent__c</fullName>
    <formula>IF(
 opportunity__r.Presales_Agent__r.UserRole.Name  = &apos;Presales Agent&apos;,
opportunity__r.Presales_Agent__r.FirstName +&apos; &apos;+ opportunity__r.Presales_Agent__r.LastName,opportunity__r.Presales_Agent__r.UserRole.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Agent</label>
    <type>Text</type>
</CustomField>