force-app/main/default/objects/Customer_Registration__c/fields/Project1__c.field-meta.xml
<CustomField>
    <fullName>Project1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Site Visit Forms</relationshipLabel>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>