force-app/main/default/objects/Customer_Registration__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Customer Registration Forms</relationshipLabel>
    <relationshipName>Customer_Registration_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>