force-app/main/default/objects/Customer_Registration__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>PropStrength__Property__c</referenceTo>
    <relationshipLabel>Site Visit Forms</relationshipLabel>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>