force-app/main/default/objects/Customer_Registration__c/fields/Purpose_Of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Purchase__c</fullName>
    <label>Purpose Of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>End Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>