force-app/main/default/objects/Customer_Registration__c/fields/Purpose_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_visit__c</fullName>
    <label>Purpose of visit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Documents Submission</fullName>
            </value>
            <value>
                <fullName>DSR</fullName>
            </value>
            <value>
                <fullName>Escrow Account Details</fullName>
            </value>
            <value>
                <fullName>Extension of Payment /Change</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
            <value>
                <fullName>Home Orientation</fullName>
            </value>
            <value>
                <fullName>Information Update</fullName>
            </value>
            <value>
                <fullName>Late Payment Fee</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>PCC not Raised</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Payment Request</fullName>
            </value>
            <value>
                <fullName>Payment Updates</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
            <value>
                <fullName>Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Rebate Information</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Statement of Account</fullName>
            </value>
            <value>
                <fullName>PDC&apos;s</fullName>
            </value>
            <value>
                <fullName>Title Deed</fullName>
            </value>
            <value>
                <fullName>Design Queries</fullName>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>