force-app/main/default/objects/Customer_Registration__c/fields/ReferedByFriendName__c.field-meta.xml
<CustomField>
    <fullName>ReferedByFriendName__c</fullName>
    <label>ReferedByFriendName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>