force-app/main/default/objects/Customer_Registration__c/fields/ReferedByFriendNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferedByFriendNumber__c</fullName>
    <label>ReferedByFriendNumber</label>
    <type>Phone</type>
</CustomField>