force-app/main/default/objects/Customer_Registration__c/fields/ReferedByFriendProjectName__c.field-meta.xml
<CustomField>
    <fullName>ReferedByFriendProjectName__c</fullName>
    <label>ReferedByFriendProjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>