force-app/main/default/objects/Customer_Registration__c/fields/Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non - UAE Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>