force-app/main/default/objects/Customer_Registration__c/fields/Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head__c</fullName>
    <formula>Owner:User.Manager.FirstName + &apos; &apos;+Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Head</label>
    <type>Text</type>
</CustomField>