force-app/main/default/objects/Customer_Registration__c/fields/Sales_Manager_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Feedback__c</fullName>
    <label>Sales Manager Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>