force-app/main/default/objects/Customer_Registration__c/fields/Site_Visit_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Start_Time__c</fullName>
    <label>Site Visit Start Time</label>
    <type>DateTime</type>
</CustomField>