force-app/main/default/objects/Customer_Registration__c/fields/SM_Feedback_Given__c.field-meta.xml
<CustomField>
    <fullName>SM_Feedback_Given__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Site_Visit_Rating__c,&apos;&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM Feedback Given</label>
    <type>Checkbox</type>
</CustomField>