force-app/main/default/objects/Customer_Registration__c/fields/SM_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Next_Action_Date__c</fullName>
    <label>SM Next Action Date</label>
    <type>DateTime</type>
</CustomField>