force-app/main/default/objects/Customer_Registration__c/fields/Sobha_Connect__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sobha Connect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sobha_Connect__c.Black_listed_user__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>Site Visit Forms</relationshipLabel>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>