force-app/main/default/objects/Customer_Registration__c/fields/Sobha_Connect_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect_Name__c</fullName>
    <formula>Sobha_Connect__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sobha Connect Name</label>
    <type>Text</type>
</CustomField>