force-app/main/default/objects/Customer_Registration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing (Digital)</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Client with Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Client with Channel Partner</fullName>
            </value>
            <value>
                <fullName>Loyalty customer</fullName>
            </value>
            <value>
                <fullName>Self Initiative</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Client with Broker</fullName>
                <isActive>false</isActive>
                <label>Client with Broker</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>