force-app/main/default/objects/Customer_Registration__c/fields/Sub_Source_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source_2__c</fullName>
    <label>Sub Source 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_Did_You_Hear_About_Us__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>