force-app/main/default/objects/Customer_Registration__c/fields/Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_Did_You_Hear_About_Us__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Cityscape</fullName>
            </value>
            <value>
                <fullName>Tollfree</fullName>
            </value>
            <value>
                <fullName>Facebook LeadGen</fullName>
            </value>
            <value>
                <fullName>Cairo_07FEB2019_Tarek</fullName>
            </value>
            <value>
                <fullName>Lagos_12Jan2019_Anil</fullName>
            </value>
            <value>
                <fullName>Tele sales AUH 27th July</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>