force-app/main/default/objects/Customer_Registration__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Site Visit Forms</relationshipLabel>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>