force-app/main/default/objects/Customer_Registration__c/fields/Visit_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Visit_Next_Action__c</fullName>
    <label>Visit Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>ReVisit Proposed</fullName>
            </value>
            <value>
                <fullName>Meeting Proposed</fullName>
            </value>
            <value>
                <fullName>No Action Needed</fullName>
            </value>
            <value>
                <fullName>Loan Approval in process</fullName>
            </value>
            <value>
                <fullName>Will revert</fullName>
            </value>
            <value>
                <fullName>Exploring more option</fullName>
            </value>
            <value>
                <fullName>Waiting for family visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>