force-app/main/default/objects/Customer_Registration__c/fields/Visiting_On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Visiting_On_Behalf_Of__c</fullName>
    <label>Visiting On Behalf Of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friends/Colleague</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>