force-app/main/default/objects/Customer_Registration__c/fields/Visiting_With__c.field-meta.xml
<CustomField>
    <fullName>Visiting_With__c</fullName>
    <label>Visiting With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>