force-app/main/default/objects/Customer_Registration__c/fields/VP_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_Name__c</fullName>
    <formula>Owner:User.Manager.Manager_Name__c</formula>
    <label>VP Name</label>
    <type>Text</type>
</CustomField>