force-app/main/default/objects/Customer_Registration__c/fields/Zones_In_Banglore__c.field-meta.xml
<CustomField>
    <fullName>Zones_In_Banglore__c</fullName>
    <label>Zones In Banglore</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cbd</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>