force-app/main/default/objects/Customer_Registration__c/recordTypes/CRM_Site_Visit.recordType-meta.xml
<RecordType>
    <fullName>CRM_Site_Visit</fullName>
    <active>true</active>
    <label>CRM Site Visit</label>
</RecordType>