force-app/main/default/objects/Customer_Registration__c/recordTypes/Site_Revisit.recordType-meta.xml
<RecordType>
    <fullName>Site_Revisit</fullName>
    <active>true</active>
    <label>Site Revisit</label>
</RecordType>