force-app/main/default/objects/Customer_Registration__c/recordTypes/Site_Visit.recordType-meta.xml
<RecordType>
    <fullName>Site_Visit</fullName>
    <active>true</active>
    <label>Site Visit</label>
</RecordType>