force-app/main/default/objects/Customer_Registration__c/validationRules/Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(Alternate_Mobile_Number__c != null,CONTAINS(Alternate_Mobile_Number__c ,&apos; &apos;) ),AND(Mobile_Number__c != null ,CONTAINS(Mobile_Number__c ,&apos; &apos;)))</errorConditionFormula>
    <errorMessage>Mobile number can not be contain space, please remove space and try again</errorMessage>
</ValidationRule>