force-app/main/default/objects/Customer_Registration__c/validationRules/Visit_Next_Action_Followup_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Next_Action_Followup_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Visit_Next_Action__c , &apos;Follow up&apos;) ,
 ISBLANK(SM_Next_Action_Date__c ) 
)</errorConditionFormula>
    <errorDisplayField>SM_Next_Action_Date__c</errorDisplayField>
    <errorMessage>Please enter &apos;Next Action Date&apos;.</errorMessage>
</ValidationRule>