force-app/main/default/objects/Customer_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity_Id__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>Sub_Project__c</columns>
    <columns>SM_Feedback_Given__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Booking__c</columns>
    <columns>Unit__c</columns>
    <columns>Token__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>